# SwiftAA

./: .gitignore  .slather.yml  .swiftformat  .travis.yml  AAAberration.swift  AABridge.podspec  Gemfile  LICENSE  ObjCAA.podspec  Package.swift  README.md  SwiftAA.podspec
.github/: FUNDING.yml
AAPlusTests/: main.cpp
ObjCAA/: KPCAAAngularSeparation.h  KPCAACoordinateTransformation.h  KPCAADate.mm  KPCAADiameters.h  KPCAAElementsPlanetaryOrbit.h  KPCAAElliptical.h  KPCAAElliptical.mm  KPCAAFK5.mm  KPCAAGlobe.mm  KPCAAInterpolate.h  KPCAAJupiter.mm  KPCAAParabolic.mm  KPCAAPhysicalMoon.mm  KPCAAPhysicalSun.h  KPCAAPlanetPerihelionAphelion.mm  KPCAAPrecession.h  KPCAARefraction.mm  KPCAASaturnRings.h  KPCAASaturnRings.mm  KPCAASidereal.mm  KPCAAStellarMagnitudes.mm  KPCAASwiftAdditions.h
Sources/: AA+  ObjCAA.h
Sources/aaplus-v2.50/: AA+.h  AA+.htm  AA2DCoordinate.h  AA3DCoordinate.h  AAAberration.cpp  AAAberration.h  AAAngularSeparation.cpp  AAAngularSeparation.h  AABinaryStar.cpp  AABinaryStar.h  AACoordinateTransformation.cpp  AACoordinateTransformation.h  AADate.cpp  AADate.h  AADefines.h  AADiameters.cpp  AADiameters.h  AADynamicalTime.cpp  AADynamicalTime.h  AAELP2000.cpp  AAELP2000.h  AAELPMPP02.h  AAEarth.cpp  AAEarth.h  AAEaster.h  AAEclipses.cpp  AAEclipses.h  AAEclipticalElements.cpp  AAEclipticalElements.h  AAElementsPlanetaryOrbit.cpp  AAElementsPlanetaryOrbit.h  AAElliptical.cpp  AAElliptical.h  AAEquationOfTime.cpp  AAEquationOfTime.h  AAEquinoxesAndSolstices.cpp  AAEquinoxesAndSolstices.h  AAEquinoxesAndSolstices2.cpp  AAEquinoxesAndSolstices2.h  AAFK5.cpp  (+206 more)
SwiftAA/: AA.swift  AA2DCoordinate.swift  AA3DCoordinate.swift  AAAberration.swift  AAAngularSeparation.swift  Aberration.swift  Angles.swift  Asteroids.swift  AstronomicalCoordinates.swift  AstronomicalObject.swift  AthmosphericRefraction.swift  BinaryStars.swift  CelestialBodies.swift  CelestialBody.swift  Constants.swift  Coordinates.swift  DateExtensions.swift  Distances.swift  Earth.swift  EclipticObject.swift  ElementsOfPlanetaryOrbit.swift  EllipticalPlanetaryDetails.swift  Fluxes.swift  GeographicCoordinates.swift  IlluminatedFraction.swift  Info.plist  JulianDay.swift  Jupiter.swift  JupiterMoons.swift  KPCAA2DCoordinate.h  KPCAA2DCoordinate.mm  KPCAA3DCoordinate.h  KPCAA3DCoordinate.mm  KPCAAAberration.h  KPCAAAberration.mm  KPCAAAngularSeparation.h  KPCAAAngularSeparation.mm  KPCAABinaryStar.h  KPCAABinaryStar.mm  KPCAACoordinateTransformation.h  (+137 more)
SwiftAA-OSX.playground/: Contents.swift
SwiftAA.xcodeproj/: project.pbxproj
SwiftAATests/: AberrationTests.swift  AnglesTests.swift  AngularSeparationTests.swift  AsteroidsTests.swift  AstronomicalCoordinatesTests.swift  AstronomicalObjectTests.swift  BinaryStarsTests.swift  CelestialBodiesTests.swift  ConstantsTests.swift  DistancesTests.swift  EarthSeasonsTests.swift  EarthTests.swift  EarthTwilightsTests.swift  ElementsOfPlanetaryOrbitTests.swift  EnumsTests.mm  GeographicCoordinatesTests.swift  IlluminatedFractionTests.swift  Info.plist  JulianDayTest.swift  JulianDayTests.swift  JupiterMoonsTests.swift  JupiterTests.swift  KPCAA2DCoordinateTests.swift  KPCAA3DCoordinateTests.swift  KPCAAAberrationTests.swift  MagnitudeTests.swift  MarsTests.swift  MercuryTests.swift  MoonTests.swift  NeptuneTests.swift  NumericTypeTests.swift  NutationTests.swift  PlanetaryBaseTest.swift  PlanetaryDiametersTests.swift  PlanetaryOrbitsTests.swift  PlanetaryPhenomenaTests.swift  RiseTransitSetTests.swift  SaturnTests.swift  SunTests.swift  SwiftAATests.swift  (+3 more)
aaplus-v1.60/: AA+.htm  AAEaster.cpp  AATest.cpp  AATest.sln  AATest.vcproj  CMakeLists.txt
aaplus-v1.63/: AA+.h  AA+.htm  AA2DCoordinate.h  AA3DCoordinate.h  AAAberration.cpp  AAAberration.h  AAAngularSeparation.h  AABinaryStar.h  AACoordinateTransformation.cpp  AACoordinateTransformation.h  AADate.cpp  AADate.h  AADiameters.h  AADynamicalTime.cpp  AADynamicalTime.h  AAEarth.cpp  AAEarth.h  AAEaster.cpp  AAEaster.h  AAEclipses.cpp  AAEclipses.h  AAEclipticalElements.h  AAElliptical.cpp  AAElliptical.h  AAEquationOfTime.cpp  AAEquationOfTime.h  AAEquinoxesAndSolstices.cpp  AAEquinoxesAndSolstices.h  AAFK5.h  AAGalileanMoons.cpp  AAGalileanMoons.h  AAGlobe.h  AAIlluminatedFraction.h  AAInterpolate.cpp  AAInterpolate.h  AAJewishCalendar.h  AAJupiter.cpp  AAJupiter.h  AAKepler.h  AAMars.cpp  (+154 more)
aaplus-v1.71/: AA+.htm  AA3DCoordinate.h  AABinaryStar.h  AACoordinateTransformation.cpp  AADate.cpp  AADate.h  AADynamicalTime.cpp  AAEaster.cpp  AAEaster.h  AAEclipses.h  AAEclipticalElements.h  AAElementsPlanetaryOrbit.h  AAElliptical.cpp  AAEquationOfTime.cpp  AAEquinoxesAndSolstices.h  AAFK5.cpp  AAGalileanMoons.h  AAInterpolate.cpp  AAInterpolate.h  AAJewishCalendar.cpp  AAJewishCalendar.h  AAJupiter.h  AAKepler.cpp  AAMars.cpp  AAMars.h  AAMoonIlluminatedFraction.h  AAMoonNodes.cpp  AAMoonNodes.h  AAMoonPerigeeApogee.cpp  AAMoonPerigeeApogee.h  AAMoonPhases.cpp  AAMoslemCalendar.cpp  AAMoslemCalendar.h  AANearParabolic.h  AANeptune.h  AANutation.cpp  AANutation.h  AAParabolic.h  AAParallactic.cpp  AAParallax.h  (+79 more)
aaplus-v1.73/: AA+.h  AA+.htm  AA2DCoordinate.h  AAAberration.cpp  AAAberration.h  AAAngularSeparation.cpp  AAAngularSeparation.h  AABinaryStar.cpp  AACoordinateTransformation.h  AADiameters.cpp  AADiameters.h  AADynamicalTime.cpp  AADynamicalTime.h  AAELP2000.cpp  AAELP2000.h  AAEarth.cpp  AAEarth.h  AAEaster.cpp  AAEaster.h  AAEclipses.cpp  AAEclipticalElements.cpp  AAElementsPlanetaryOrbit.cpp  AAElliptical.h  AAEquationOfTime.h  AAEquinoxesAndSolstices.cpp  AAFK5.h  AAGalileanMoons.cpp  AAGlobe.cpp  AAGlobe.h  AAIlluminatedFraction.cpp  AAIlluminatedFraction.h  AAJupiter.cpp  AAKepler.h  AAMercury.cpp  AAMercury.h  AAMoon.cpp  AAMoon.h  AAMoonIlluminatedFraction.cpp  AAMoonMaxDeclinations.cpp  AAMoonMaxDeclinations.h  (+71 more)
aaplus-v1.76/: AA+.h  AA2DCoordinate.h  AAAberration.cpp  AAAberration.h  AAAngularSeparation.cpp  AAAngularSeparation.h  AABinaryStar.cpp  AACoordinateTransformation.h  AADate.cpp  AADiameters.h  AADynamicalTime.cpp  AAELP2000.cpp  AAELP2000.h  AAEarth.cpp  AAEaster.h  AAFK5.cpp  AAFK5.h  (+101 more)
(+1200 files in other folders)
